<resources>
    <string name="app_name">Calucator_app</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="_0">0</string>
    <string name="plus_minus">±</string>
    <string name="miuns">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="mulitblue">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="divide">/</string>
    <string name="mode">%</string>
    <string name="arrow">←</string>
    <string name="ac">AC</string>
    <string name="_12_5_2019">12 + 5 = 2019</string>
    <string name="_2034">2034</string>
</resources>